@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- added edit icon to grid row in Settings -> Container grid
 - [#56] fixed broken chunksPath in goodnewssubscription.class.php
 - fixed some typos in lexicons
 - [#57] exlude mailto links from link manipulation (_fullURLs method)
